--- a/packages/web/static/terms.html
+++ b/packages/web/static/terms.html
@@ -1,6 +1,6 @@
 <div>
   <h1>Terms of Use</h1>
-  <h6>Last revised on December 5, 2020</h6>
+  <h6>Last revised on December 13, 2020</h6>
   <p>Welcome to VSinder, operated by Ben Awad.</p>
   <h2>1. Acceptance of Terms of Use Agreement.</h2>
   <p>
@@ -30,9 +30,9 @@
   </p>
   <h2>2. Eligibility.</h2>
   <p>
-    You must be at least 18 years of age to create an account on VSinder and use
-    the Service. By creating an account and using the Service, you represent and
-    warrant that:
+    You must be at least 18 years of age to create an account on VSinder for the
+    purposes of love and use the Service. By creating an account and using the
+    Service, you represent and warrant that:
   </p>
   <ul>
     <li>you can form a binding contract with VSinder,</li>
