--- a/packages/web/static/index.html
+++ b/packages/web/static/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <span class="text-muted">Made with ❤️ by <a href="https://github.com/benawad/vsinder">VSinder GitHub
           community</a>, based on <a href="https://getbootstrap.com/docs/5.0/examples/sticky-footer/">this
-          Bootstrap example</a></span>
+          Bootstrap example</a>.</span>
     </div>
   </footer>
 </body>
